IGNITE-22334 after review #1.0